tests/conformance/typecheck/valid/extern_type_in_signature.ks
extern type HashMap = jvm("java.util.HashMap")
fun id(m: HashMap): HashMap = m
